--- a/_posts/2021-12-04-jotting.markdown
+++ b/_posts/2021-12-04-jotting.markdown
@@ -5,7 +5,7 @@ subtitle:   "First Commit"
 date:       2021-12-04 21:10:00
 author:     "Ethan"
 header-img: "img/home-bg.jpg"
-catalog: true
+catalog: false
 tags:
     - 生活
 ---
