--- a/_posts/2022-03-09-notes.md
+++ b/_posts/2022-03-09-notes.md
@@ -9,8 +9,10 @@ tags:
     - 学习
     - 数据库
 ---
+>System is Art of Compromise
 
-其实有非常多的并发控制协议，各种协议还可以融合在一起形成一个新协议，下面简单介绍几种基本的并发控制协议。
+并发控制协议有很多，不同的协议适合不同的工作负载，比如基于锁的，也就是悲观并发控制协议适合冲突率高的负载（update intensive），而乐观并发控制协议适合冲突率低的负载（read intensive）。  
+人们一直渴望提出更完美的协议，在保证正确性（ACID）的情况下，尽量提高吞吐量（高并发），各种协议各有所长，下面简单介绍几种基本的并发控制协议。
 # 两阶段封锁协议 2PL
 2PL即two phase locking，包含两个阶段，分别是扩张和收缩阶段，扩张阶段只能加锁，收缩阶段只能释放锁，注意**2PL不能避免死锁**，比如有两个事务T1，T2，T1持有了X的写锁，T2持有了Y的写锁，此时，T1想申请Y的读锁，T2想申请X的读锁，但两者都无法申请成功，因此形成死锁。
 
@@ -39,10 +41,11 @@ tags:
 - 对于事务Ti的读操作，如果TS(Ti)< W-TS(X)，这就意味着Ti想要读取一个对于它来说，是存在于未来的版本的数据，这时要回滚并重新启动Ti，重新启动会获得一个新的时间戳；如果TS(Ti)> W-TS(X)，那么Ti可以读取X，并且更新R-TS(X)=max(R-TS(X),TS(Ti))。
 - 对于事务Ti的写操作，如果TS(Ti)< R-TS(X)或者TS(Ti)< W-TS(X)，那么要回滚并重新启动Ti，否则允许Ti更新X的值并更新W-TS(X)=TS(Ti)。注：TS(Ti)< R-TS(X)不被允许是因为X已经被更新（newer）的事务读取过，TS(Ti)< W-TS(X)不被允许是因为X已经被更新（newer）的事务写了。
 - 不论是读还是写，事务Ti都会拷贝X到自己私有的内存区，这是为了实现RR（可重复读）。
-- T/O的缺点在于  
-    - 内存拷贝的开销
-    - 分配时间戳（多个线程想要申请时间戳，但一次只能给一个）
-    - 长事务可能存在饥饿现象（长事务可能总是会访问被新事务访问过的数据项）
+
+Basic T/O的缺点在于  
+- 内存拷贝的开销
+- 分配时间戳（多个线程想要申请时间戳，但一次只能给一个）
+- 长事务可能存在饥饿现象（长事务可能总是会访问被新事务访问过的数据项）
 
 **Partition based T/O**  
 将数据库的数据分为多个不相交的子集，称之为水平分区（horizontal partition），也叫分片（shard），每个分区有一个锁。每个事务在到达DBMS时会被分配一个时间戳，每个事务要知道自己的读写集，并尝试申请自己会访问到的所有分区的锁，分区锁会分配给等待队列中时间戳最小的事务，其他事务则等待，只有在获取了**所有**分区的锁后，事务才会开始执行。  
@@ -55,18 +58,21 @@ tags:
 - Ti在Tj开始前就完成了
 - Ti的写集和Tj的读集没有交叉，并且在Tj开始write phase之前Ti就完成了write phase。这意味着Ti的write phase和Tj的read phase可以处于同一时间，但Ti的写不会影响Tj的读，并且Ti的写也不会影响Tj的写。
 - Ti的写集和Tj的读写集都没有交叉，并且在Tj完成read phase之前Ti就已经完成了read phase。这意味着Ti的写不会影响Tj的读和写，并且Tj的写不会影响Ti的读。  
+
 **Write phase：** 如果validation phase通过了则将事务私有的内存区中暂存的写操作写到数据库中，否则回滚并重启事务。  
 OCC的缺点在于：
-- 内存复制开销大
+- 内存拷贝开销大
 - 事务回滚开销大（因为事务都是完成了所有的读写操作再进入validation phase检查是否能提交）
 
 # 多版本并发控制协议 MVCC
-DBMS会维护记录的多个版本，写操作会创建一个新的版本，读操作会读事务开始时最新的版本（事务开始后有新的版本是读不到的）。MVCC中读写操作互不阻塞，但写操作会阻塞写操作。MVCC在大量数据库中得到了使用包括PostgreSQL和MySQL。MVCC其实不能完全算是并发控制协议，它的概念更广一点，包括如下几个方面：  
+DBMS会维护记录的多个版本，写操作会创建一个新的版本，读操作会读事务开始时最新的版本（事务开始后有新的版本是读不到的）。MVCC中读写操作互不阻塞，但写操作会阻塞写操作。MVCC在大量数据库中得到了使用包括PostgreSQL和MySQL。  
+MVCC其实不能完全算是并发控制协议，它的概念更广一点，包括如下几个方面：  
 **并发控制协议：** MVCC要结合其他并发控制协议才能发挥构成一个完整的并发控制协议，包括Timestamp Ordering，OCC和2PL。  
 **版本管理：** 即如何存储和管理版本链，MVCC中的某条记录的多个版本构成一个链表，记录中有一个字段是指针，用于链接这些版本。  
 **垃圾回收：** MVCC因为引入了多版本，意味着它要实现垃圾回收的功能，可回收的版本包括
 - 过旧的版本：当前所有活跃的事务已经不再需要这个版本了
-- 失效的版本：事务回滚导致版本失效  
+- 失效的版本：事务回滚导致版本失效
+
 **索引管理：** 主键索引指向版本链的头部。
 
 # References
