--- a/_posts/2022-03-09-notes.md
+++ b/_posts/2022-03-09-notes.md
@@ -5,6 +5,7 @@ subtitle:   "Summary of concurrency control protocol"
 date:       2022-03-09 22:24:00
 author:     "Ethan"
 catalog: false
+header-style: text
 tags:
     - 学习
     - 数据库
