--- a/_posts/2022-04-01-tmp.md
+++ b/_posts/2022-04-01-tmp.md
@@ -9,5 +9,5 @@ tags:
 
 ---
 <audio id="audio" controls="" preload="none">
-      <source id="mp3" src="/_posts/SunnySideUp.mp3">
+      <source id="mp3" src="./music.mp3">
       </audio>
