--- a/_posts/2022-04-01-tmp.md
+++ b/_posts/2022-04-01-tmp.md
@@ -8,6 +8,5 @@ header-style: text
 tags:
 
 ---
-<audio id="audio" controls="" preload="none">
-      <source id="mp3" src="https://github.com/blingblingwink/blingblingwink.github.io/blob/master/_posts/music.mp3">
-      </audio>
+
+<audio src="music.mp3" controls> </audio>
