--- a/_posts/2022-04-01-tmp.md
+++ b/_posts/2022-04-01-tmp.md
@@ -29,4 +29,6 @@ tags:
 有点可惜的是，我们在一起虽然有许多快乐，也有许多争吵，大多是因为我疏忽了你的感受，反反复复的分分合合让你我都累了，感情不应该这样，应该好好珍惜而不是随便说分手。  
 这几天我反思了，我确实有做的不对的地方，我想再跟你说一次，艺蓉，我想对你好好的，我喜欢你。
 
+最后是路飞的笑容，我很喜欢路飞哦，其实我最开始挺讨厌他的，觉得他性格怪怪的，后面慢慢被他人格魅力打动了。别的不说，他不管经历啥，最后都能笑得暖暖的，看，他牙都被打掉了一颗还笑得这么阳光^_^
+
 ![img](/img/blogs/smile.png)
