--- a/_posts/2022-04-01-tmp.md
+++ b/_posts/2022-04-01-tmp.md
@@ -24,10 +24,11 @@ tags:
 
 哦，对了，这篇文章的题目是浪漫手机。我昨天在这，唱了好几遍这首歌，当然是唱给你的，你知道我五音不全的，我选了一份勉强能听的。
 
-<audio src="music.mp3" controls> </audio>
+<audio src="/music.mp3" controls> </audio>
 
-有点可惜的是，我们在一起虽然有许多快乐，也有许多争吵，大多是因为我疏忽了你的感受，反反复复的分分合合让你我都累了，感情不应该这样，应该好好珍惜而不是随便说分手。  
-这几天我反思了，我确实有做的不对的地方，我想再跟你说一次，艺蓉，我想对你好好的，我喜欢你。
+你说，在人大有我才有了归属感，其实我也想这么跟你说，你，让我的研究生生活有了色彩。
+有点可惜的是，我们在一起是有许多快乐，但也有许多争吵，大多是因为我疏忽了你的感受，忽视了与你培养感情的一些机会，反反复复的分分合合让你我都累了。  
+这几天我反思了，我确实有做的不对的地方，我想再最后争取一下，艺蓉，我想对你好好的，我喜欢你。
 
 最后是路飞的笑容，我很喜欢路飞哦，其实我最开始挺讨厌他的，觉得他性格怪怪的，后面慢慢被他人格魅力打动了。别的不说，他不管经历啥，最后都能笑得暖暖的，看，他牙都被打掉了一颗还笑得这么阳光^_^
 
