--- a/_posts/2022-04-01-secret.md
+++ b/_posts/2022-04-01-secret.md
@@ -24,7 +24,7 @@ tags:
 
 哦，对了，这篇文章的题目是浪漫手机。我昨天在这，唱了好几遍这首歌，当然是唱给你的，你知道我五音不全的，我选了一份勉强能听的。
 
-<audio src="/music.mp3" controls> </audio>
+<audio src="/romance.mp3" controls> </audio>
 
 你说，在人大有我才有了归属感，其实我也想这么跟你说，你，让我的研究生生活有了色彩。
 有点可惜的是，我们在一起是有许多快乐，但也有许多争吵，大多是因为我疏忽了你的感受，忽视了与你培养感情的一些机会，反反复复的分分合合让你我都累了。  
