--- a/_posts/2022-04-01-secret.md
+++ b/_posts/2022-04-01-secret.md
@@ -26,11 +26,11 @@ tags:
 
 <audio src="/romance.mp3" controls> </audio>
 
-你说，在人大有我才有了归属感，其实我也想这么跟你说，你，让我的研究生生活有了色彩。
+你说，在人大有我才有了归属感，其实我也想这么跟你说，你，让我的研究生生活有了色彩。  
 有点可惜的是，我们在一起是有许多快乐，但也有许多争吵，大多是因为我疏忽了你的感受，忽视了与你培养感情的一些机会，反反复复的分分合合让你我都累了。  
-这几天我反思了，我确实有做的不对的地方，我想再最后争取一下，艺蓉，我想对你好好的，我喜欢你。  
-如果你还愿意和我在一起，我会跟你说我认识到哪里错了，咱们一起好好商量，好好沟通，我会去改。如果因为种种原因你选择放弃，我也理解你。
+这几天我认真反思了，我确实有做的不对的地方，我想再最后争取一下，艺蓉，我想对你好好的，我喜欢你。  
+但这次不会再想以前那样哄哄你就过去了，我是认真反思过的。如果你还愿意和我在一起，我会跟你说我认识到哪里错了，咱们一起好好商量，好好沟通，我会去改。如果因为种种原因你选择放弃，我也理解你。
 
-最后是路飞的笑容，我很喜欢路飞哦，其实我最开始挺讨厌他的，觉得他性格怪怪的，后面慢慢被他人格魅力打动了。别的不说，他不管经历啥，最后都能笑得暖暖的，看，他牙都被打掉了一颗还笑得这么阳光^_^
+最后是路飞的笑容，我很喜欢路飞哦，其实我最开始挺讨厌他的，觉得他性格怪怪的，后面慢慢被他人格魅力打动了。别的不说，他不管经历啥，最后都能笑得暖暖的，看，他牙都被打掉了一颗还笑得这么阳光^_^。不管怎么样，开心最重要哦~
 
 ![img](/img/blogs/smile.png)
